assets/css/style.css
/* Import google fonts using api */
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&family=Montserrat:wght@400;700&family=Poppins:wght@300;400;600&display=swap');

body {
  background-color: white;
  color: black;
  transition: background-color 0.3s, color 0.3s;
  font-family: 'Poppins', sans-serif;
  margin: 0;
}

h1, h2 {
  font-family: 'Montserrat', sans-serif;
}

/* Dark mode styles */
body.dark-mode {
  background-color: #1E1E1E;
  color: #FFFFFF;
}

/* Taskbar container */
#taskbar {
  background-color: #f8f9fa;
  padding: 15px 20px;
  border-bottom: 1px solid #ddd;
  font-family: Arial, sans-serif;
  position: sticky;
  top: 0;
  z-index: 100;
}

/* Links inside the taskbar */
#taskbar a {
  text-decoration: none;
  color: #333;
  margin: 0 15px;
  font-size: 18px;
  transition: color 0.3s, border-bottom 0.3s;
  padding-bottom: 5px;
} 

/* Hover effect for links */
#taskbar a:hover {
  color: #007acc;
  border-bottom: 2px solid #007acc;
}

.center-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

#backToTop {
  background-color: #007acc;
  color: white;
  padding: 10px 15px;
  text-decoration: none;
  border-radius: 5px;
  font-family: Arial, sans-serif;
  font-size: 14px;
  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
  transition: background-color 0.3s;
  border: none;
  cursor: pointer;
}

#backToTop:hover {
  background-color: #005f99;
}

